# backend/docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserLogin"
                         }
                     }
                 ],
@@ -84,7 +84,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.userRegister"
                         }
                     }
                 ],
@@ -130,13 +130,21 @@
         }
     },
     "definitions": {
-        "models.User": {
+        "models.UserLogin": {
             "type": "object",
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "id": {
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.userRegister": {
+            "type": "object",
+            "properties": {
+                "email": {
                     "type": "string"
                 },
                 "lastName": {
