# backend/models/user.go
@@ -3,9 +3,21 @@ package models
 import "go.mongodb.org/mongo-driver/bson/primitive"
 
 type User struct {
-    ID primitive.ObjectID  `json:"id,omitempty" bson:"_id,omitempty"`
-    Email    string        `json:"email" bson:"email"`
-    Password string        `json:"password" bson:"password"`
-	Name string            `json:"name" bson:"name"`
-	LastName string        `json:"lastName" bson:"lastName"`
+	ID       primitive.ObjectID `json:"id,omitempty" bson:"_id,omitempty"`
+	Email    string             `json:"email" bson:"email"`
+	Password string             `json:"password" bson:"password"`
+	Name     string             `json:"name" bson:"name"`
+	LastName string             `json:"lastName" bson:"lastName"`
+}
+
+type UserLogin struct {
+	Email    string `json:"email" bson:"email"`
+	Password string `json:"password" bson:"password"`
+}
+
+type userRegister struct {
+	Email    string `json:"email" bson:"email"`
+	Password string `json:"password" bson:"password"`
+	Name     string `json:"name" bson:"name"`
+	LastName string `json:"lastName" bson:"lastName"`
 }
